# wcr

./: .gitignore  .pre-commit-config.yaml  Cargo.toml
.reuse/: dep5
src/: input.rs  lib.rs  main.rs  options.rs  stats.rs
tests/: wcr.rs
tests/inputs/: ascii.txt.license
tests/outputs/: ascii_no_options.txt
